deployments/pathweb/workloads/home-network/rethink-cloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rethink-cloud
  namespace: home-network
spec:
  selector: {}
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rethink-cloud
    spec:
      priorityClassName: rfhome-home-critical
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: rethink-cloud
        image: ghcr.io/anszom/rethink:dev
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
        ports:
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 8883
          name: mqtts
          protocol: TCP
        - containerPort: 46030
          name: thinq1-https
          protocol: TCP
        - containerPort: 47878
          name: thinq1
          protocol: TCP
        - containerPort: 44401
          name: management
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /app/data
        - name: config-out
          mountPath: /app/data/config.json
          subPath: config.json
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            memory: 512Mi
        startupProbe:
          failureThreshold: 30
          tcpSocket:
            port: management
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 3
          tcpSocket:
            port: management
          periodSeconds: 30
          timeoutSeconds: 5
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: rethink-cloud-data
      - name: config-out
        emptyDir:
          medium: Memory
          sizeLimit: 1Mi
      - name: config
        configMap:
          name: rethink-cloud-config
          defaultMode: 0644
